update some files

--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -103,135 +103,34 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-
-			//import TWEEN from 'three/addons/libs/tween.module.js';
-			//import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
-			//import { CSS3DRenderer, CSS3DObject } from 'three/addons/renderers/CSS3DRenderer.js';
-
 			import TWEEN from './tween.module.js';
 			import { TrackballControls } from './TrackballControls.js';
 			import { CSS3DRenderer, CSS3DObject } from './CSS3DRenderer.js';
 
-			const table = [
-				'H', 'Hydrogen', '1.00794', 1, 1,
-				'He', 'Helium', '4.002602', 18, 1,
-				'Li', 'Lithium', '6.941', 1, 2,
-				'Be', 'Beryllium', '9.012182', 2, 2,
-				'B', 'Boron', '10.811', 13, 2,
-				'C', 'Carbon', '12.0107', 14, 2,
-				'N', 'Nitrogen', '14.0067', 15, 2,
-				'O', 'Oxygen', '15.9994', 16, 2,
-				'F', 'Fluorine', '18.9984032', 17, 2,
-				'Ne', 'Neon', '20.1797', 18, 2,
-				'Na', 'Sodium', '22.98976...', 1, 3,
-				'Mg', 'Magnesium', '24.305', 2, 3,
-				'Al', 'Aluminium', '26.9815386', 13, 3,
-				'Si', 'Silicon', '28.0855', 14, 3,
-				'P', 'Phosphorus', '30.973762', 15, 3,
-				'S', 'Sulfur', '32.065', 16, 3,
-				'Cl', 'Chlorine', '35.453', 17, 3,
-				'Ar', 'Argon', '39.948', 18, 3,
-				'K', 'Potassium', '39.948', 1, 4,
-				'Ca', 'Calcium', '40.078', 2, 4,
-				'Sc', 'Scandium', '44.955912', 3, 4,
-				'Ti', 'Titanium', '47.867', 4, 4,
-				'V', 'Vanadium', '50.9415', 5, 4,
-				'Cr', 'Chromium', '51.9961', 6, 4,
-				'Mn', 'Manganese', '54.938045', 7, 4,
-				'Fe', 'Iron', '55.845', 8, 4,
-				'Co', 'Cobalt', '58.933195', 9, 4,
-				'Ni', 'Nickel', '58.6934', 10, 4,
-				'Cu', 'Copper', '63.546', 11, 4,
-				'Zn', 'Zinc', '65.38', 12, 4,
-				'Ga', 'Gallium', '69.723', 13, 4,
-				'Ge', 'Germanium', '72.63', 14, 4,
-				'As', 'Arsenic', '74.9216', 15, 4,
-				'Se', 'Selenium', '78.96', 16, 4,
-				'Br', 'Bromine', '79.904', 17, 4,
-				'Kr', 'Krypton', '83.798', 18, 4,
-				'Rb', 'Rubidium', '85.4678', 1, 5,
-				'Sr', 'Strontium', '87.62', 2, 5,
-				'Y', 'Yttrium', '88.90585', 3, 5,
-				'Zr', 'Zirconium', '91.224', 4, 5,
-				'Nb', 'Niobium', '92.90628', 5, 5,
-				'Mo', 'Molybdenum', '95.96', 6, 5,
-				'Tc', 'Technetium', '(98)', 7, 5,
-				'Ru', 'Ruthenium', '101.07', 8, 5,
-				'Rh', 'Rhodium', '102.9055', 9, 5,
-				'Pd', 'Palladium', '106.42', 10, 5,
-				'Ag', 'Silver', '107.8682', 11, 5,
-				'Cd', 'Cadmium', '112.411', 12, 5,
-				'In', 'Indium', '114.818', 13, 5,
-				'Sn', 'Tin', '118.71', 14, 5,
-				'Sb', 'Antimony', '121.76', 15, 5,
-				'Te', 'Tellurium', '127.6', 16, 5,
-				'I', 'Iodine', '126.90447', 17, 5,
-				'Xe', 'Xenon', '131.293', 18, 5,
-				'Cs', 'Caesium', '132.9054', 1, 6,
-				'Ba', 'Barium', '132.9054', 2, 6,
-				'La', 'Lanthanum', '138.90547', 4, 9,
-				'Ce', 'Cerium', '140.116', 5, 9,
-				'Pr', 'Praseodymium', '140.90765', 6, 9,
-				'Nd', 'Neodymium', '144.242', 7, 9,
-				'Pm', 'Promethium', '(145)', 8, 9,
-				'Sm', 'Samarium', '150.36', 9, 9,
-				'Eu', 'Europium', '151.964', 10, 9,
-				'Gd', 'Gadolinium', '157.25', 11, 9,
-				'Tb', 'Terbium', '158.92535', 12, 9,
-				'Dy', 'Dysprosium', '162.5', 13, 9,
-				'Ho', 'Holmium', '164.93032', 14, 9,
-				'Er', 'Erbium', '167.259', 15, 9,
-				'Tm', 'Thulium', '168.93421', 16, 9,
-				'Yb', 'Ytterbium', '173.054', 17, 9,
-				'Lu', 'Lutetium', '174.9668', 18, 9,
-				'Hf', 'Hafnium', '178.49', 4, 6,
-				'Ta', 'Tantalum', '180.94788', 5, 6,
-				'W', 'Tungsten', '183.84', 6, 6,
-				'Re', 'Rhenium', '186.207', 7, 6,
-				'Os', 'Osmium', '190.23', 8, 6,
-				'Ir', 'Iridium', '192.217', 9, 6,
-				'Pt', 'Platinum', '195.084', 10, 6,
-				'Au', 'Gold', '196.966569', 11, 6,
-				'Hg', 'Mercury', '200.59', 12, 6,
-				'Tl', 'Thallium', '204.3833', 13, 6,
-				'Pb', 'Lead', '207.2', 14, 6,
-				'Bi', 'Bismuth', '208.9804', 15, 6,
-				'Po', 'Polonium', '(209)', 16, 6,
-				'At', 'Astatine', '(210)', 17, 6,
-				'Rn', 'Radon', '(222)', 18, 6,
-				'Fr', 'Francium', '(223)', 1, 7,
-				'Ra', 'Radium', '(226)', 2, 7,
-				'Ac', 'Actinium', '(227)', 4, 10,
-				'Th', 'Thorium', '232.03806', 5, 10,
-				'Pa', 'Protactinium', '231.0588', 6, 10,
-				'U', 'Uranium', '238.02891', 7, 10,
-				'Np', 'Neptunium', '(237)', 8, 10,
-				'Pu', 'Plutonium', '(244)', 9, 10,
-				'Am', 'Americium', '(243)', 10, 10,
-				'Cm', 'Curium', '(247)', 11, 10,
-				'Bk', 'Berkelium', '(247)', 12, 10,
-				'Cf', 'Californium', '(251)', 13, 10,
-				'Es', 'Einstenium', '(252)', 14, 10,
-				'Fm', 'Fermium', '(257)', 15, 10,
-				'Md', 'Mendelevium', '(258)', 16, 10,
-				'No', 'Nobelium', '(259)', 17, 10,
-				'Lr', 'Lawrencium', '(262)', 18, 10,
-				'Rf', 'Rutherfordium', '(267)', 4, 7,
-				'Db', 'Dubnium', '(268)', 5, 7,
-				'Sg', 'Seaborgium', '(271)', 6, 7,
-				'Bh', 'Bohrium', '(272)', 7, 7,
-				'Hs', 'Hassium', '(270)', 8, 7,
-				'Mt', 'Meitnerium', '(276)', 9, 7,
-				'Ds', 'Darmstadium', '(281)', 10, 7,
-				'Rg', 'Roentgenium', '(280)', 11, 7,
-				'Cn', 'Copernicium', '(285)', 12, 7,
-				'Nh', 'Nihonium', '(286)', 13, 7,
-				'Fl', 'Flerovium', '(289)', 14, 7,
-				'Mc', 'Moscovium', '(290)', 15, 7,
-				'Lv', 'Livermorium', '(293)', 16, 7,
-				'Ts', 'Tennessine', '(294)', 17, 7,
-				'Og', 'Oganesson', '(294)', 18, 7
-			];
+			let table = []; // Declare the variable outside to make it accessible
+
+			async function fetchData() {
+				try {
+				const response = await fetch("http://localhost:3000/api/sheetdata");
+				const data = await response.json();
+
+				console.log("Raw Data:", data); // Debugging log
+
+				// Safely map the data and ensure it's in the expected format
+				table = data.slice(1).map((row) => ({
+					Name: row[0] || "",
+					Photo: row[1] || "",
+					Age: row[2] || "",
+					Country: row[3] || "",
+					Interest: row[4] || "",
+					NetWorth: row[5] || "",
+				}));
+
+				console.log("Formatted Data:", table); // Debugging log
+				} catch (error) {
+					console.error("Error fetching data:", error);
+				}
+			}
 
 			let camera, scene, renderer;
 			let controls;
@@ -239,8 +138,18 @@
 			const objects = [];
 			const targets = { table: [], sphere: [], helix: [], grid: [] };
 
-			init();
-			animate();
+			async function initWithData() {
+				try {
+					await fetchData(); // Wait for data to be fetched
+					console.log("Data fetched successfully:", table);
+					init(); // Initialize only after data is ready
+					animate(); // Start animation
+				} catch (error) {
+					console.error("Error initializing data and scene:", error);
+				}
+			}
+
+			initWithData();
 
 			function init() {
 
@@ -251,44 +160,85 @@
 
 				// table
 
-				for ( let i = 0; i < table.length; i += 5 ) {
-
-					const element = document.createElement( 'div' );
+				for (let i = 0; i < table.length; i++) {
+					const element = document.createElement('div');
 					element.className = 'element';
-					element.style.backgroundColor = 'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';
+					
+					const netWorth = parseFloat(table[i]?.NetWorth.replace(/[$,]/g, "")); // Parse NetWorth
+let borderColor;
 
-					const number = document.createElement( 'div' );
-					number.className = 'number';
-					number.textContent = ( i / 5 ) + 1;
-					element.appendChild( number );
+// Assign border color based on NetWorth
+if (netWorth < 100000) {
+  borderColor = "#EF3022"; // Red
+} else if (netWorth >= 100000 && netWorth <= 200000) {
+  borderColor = "#FDCA35"; // Orange
+} else {
+  borderColor = "#3A9F48"; // Green
+}
 
-					const symbol = document.createElement( 'div' );
-					symbol.className = 'symbol';
-					symbol.textContent = table[ i ];
-					element.appendChild( symbol );
+// Set styles
+element.style.backgroundColor = "black"; // Keep the background black
+element.style.border = `4px solid ${borderColor}`; // Add colored border
 
-					const details = document.createElement( 'div' );
-					details.className = 'details';
-					details.innerHTML = table[ i + 1 ] + '<br>' + table[ i + 2 ];
-					element.appendChild( details );
 
-					const objectCSS = new CSS3DObject( element );
+
+					const country = document.createElement('div');
+					country.className = 'country';
+					country.style.position = 'absolute';
+					country.style.top = '10px';
+					country.style.left = '10px';
+					country.textContent = table[i]?.Country || "N/A";
+					element.appendChild(country);
+
+					const age = document.createElement('div');
+					age.className = 'age';
+					age.style.position = 'absolute';
+					age.style.top = '10px';
+					age.style.right = '10px';
+					age.textContent = table[i]?.Age || "N/A";
+					element.appendChild(age);
+
+					const photo = document.createElement('img');
+					photo.className = 'photo';
+					photo.src = table[i]?.Photo || "";
+					photo.style.width = '80px';
+					photo.style.height = '80px';
+					photo.style.margin = '20px auto'; // Add margin at the top
+					photo.style.display = 'block';
+					photo.style.position = 'relative';
+					photo.style.top = '20px'; // Lower the image
+					element.appendChild(photo);
+
+					const name = document.createElement('div');
+					name.className = 'name';
+					name.style.textAlign = 'center';
+					name.style.marginTop = '10px';
+					name.textContent = table[i]?.Name || "N/A";
+					element.appendChild(name);
+
+					const interest = document.createElement('div');
+					interest.className = 'interest';
+					interest.style.textAlign = 'center';
+					interest.style.marginTop = '5px';
+					interest.textContent = table[i]?.Interest || "N/A";
+					element.appendChild(interest);
+
+
+					const objectCSS = new CSS3DObject(element);
 					objectCSS.position.x = Math.random() * 4000 - 2000;
 					objectCSS.position.y = Math.random() * 4000 - 2000;
 					objectCSS.position.z = Math.random() * 4000 - 2000;
-					scene.add( objectCSS );
+					scene.add(objectCSS);
 
-					objects.push( objectCSS );
-
-					//
+					objects.push(objectCSS);
 
 					const object = new THREE.Object3D();
-					object.position.x = ( table[ i + 3 ] * 140 ) - 1330;
-					object.position.y = - ( table[ i + 4 ] * 180 ) + 990;
-
-					targets.table.push( object );
+					object.position.x = ((i % 20) * 200) - 1900; // 20 columns
+					object.position.y = -(Math.floor(i / 20) * 200) + 900; // 10 rows
+					targets.table.push(object);
 
 				}
+
 
 				// sphere
 
@@ -311,39 +261,46 @@
 
 				}
 
-				// helix
+				// double helix
+				for (let i = 0, l = objects.length / 2; i < l; i++) {
 
-				for ( let i = 0, l = objects.length; i < l; i ++ ) {
+					const theta = i * 0.2; // Angular increment
+					const y = -(i * 15) + 450; // Vertical position
 
-					const theta = i * 0.175 + Math.PI;
-					const y = - ( i * 8 ) + 450;
+					// First helix
+					const object1 = new THREE.Object3D();
+					object1.position.setFromCylindricalCoords(500, theta, y);
+					vector.set(object1.position.x * 2, object1.position.y, object1.position.z * 2);
+					object1.lookAt(vector);
+					targets.helix.push(object1);
 
-					const object = new THREE.Object3D();
+					// Second helix (offset in angle)
+					const object2 = new THREE.Object3D();
+					object2.position.setFromCylindricalCoords(500, theta + Math.PI, y); // Opposite angle
+					vector.set(object2.position.x * 2, object2.position.y, object2.position.z * 2);
+					object2.lookAt(vector);
+					targets.helix.push(object2);
 
-					object.position.setFromCylindricalCoords( 900, theta, y );
-
-					vector.x = object.position.x * 2;
-					vector.y = object.position.y;
-					vector.z = object.position.z * 2;
-
-					object.lookAt( vector );
-
-					targets.helix.push( object );
+					// Third helix
+					const object3 = new THREE.Object3D();
+					object3.position.setFromCylindricalCoords(300, theta + Math.PI / 2, y); // Midway angle
+					vector.set(object3.position.x * 2, object3.position.y, object3.position.z * 2);
+					object3.lookAt(vector);
+					targets.helix.push(object3);
 
 				}
-
+				
 				// grid
-
-				for ( let i = 0; i < objects.length; i ++ ) {
+				for (let i = 0; i < objects.length; i++) {
 
 					const object = new THREE.Object3D();
 
-					object.position.x = ( ( i % 5 ) * 400 ) - 800;
-					object.position.y = ( - ( Math.floor( i / 5 ) % 5 ) * 400 ) + 800;
-					object.position.z = ( Math.floor( i / 25 ) ) * 1000 - 2000;
+					// Arrange in a 5x4x10 grid
+					object.position.x = ((i % 5) * 400) - 800; // 5 columns
+					object.position.y = (-Math.floor((i % 20) / 5) * 400) + 800; // 4 rows (5x4 grid slice)
+					object.position.z = (Math.floor(i / 20) * 400) - 2000; // 10 layers in depth
 
-					targets.grid.push( object );
-
+					targets.grid.push(object);
 				}
 
 				//
