--- a/index.html
+++ b/index.html
@@ -1,61 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h2 {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 4px;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .login-container button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Google Sign-In</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+      background-color: #f4f4f9;
+    }
+
+    .signin-container {
+      margin-top: 50px;
+    }
+
+    #welcome {
+      margin-top: 20px;
+    }
+
+    img {
+      border-radius: 50%;
+      margin-top: 10px;
+    }
+
+    .logout-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4285F4;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .logout-button:hover {
+      background-color: #357AE8;
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Welcome Back</h2>
-        <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
+  <h1>Welcome to My Website</h1>
+  <p>Sign in with Google to access personalized features</p>
+
+  <div class="signin-container">
+    <div id="g_id_onload"
+         data-client_id="685424294823-a8fvr00a93j8ic2eni4sq63oich7g7nr.apps.googleusercontent.com"
+         data-callback="handleCredentialResponse"
+         data-scope="email profile"
+         data-ux_mode="popup">
     </div>
+    <div class="g_id_signin" data-type="standard"></div>
+  </div>
+
+  <div id="welcome"></div>
+
+  <script>
+    // Function to handle the response from Google Sign-In
+    function handleCredentialResponse(response) {
+      // Decode the ID token using jwt-decode library
+      const data = jwt_decode(response.credential);
+
+      // Display user information
+      document.getElementById("welcome").innerHTML = `
+        <p>Welcome, ${data.name}!</p>
+        <img src="${data.picture}" alt="User's profile picture" width="100" height="100">
+        <p>Email: ${data.email}</p>
+        <button class="logout-button" onclick="logout()">Log Out</button>
+      `;
+      
+      // Optionally: Log user data to the console
+      console.log("User Data:", data);
+    }
+
+    // Function to log out (reload the page)
+    function logout() {
+      document.getElementById("welcome").innerHTML = "";
+      location.reload();
+    }
+  </script>
 </body>
 </html>
