--- a/index.html
+++ b/index.html
@@ -3,85 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Sign-In</title>
+  <title>Google Sign-In Example</title>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-      background-color: #f4f4f9;
-    }
-
-    .signin-container {
-      margin-top: 50px;
-    }
-
-    #welcome {
-      margin-top: 20px;
-    }
-
-    img {
-      border-radius: 50%;
-      margin-top: 10px;
-    }
-
-    .logout-button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #4285F4;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .logout-button:hover {
-      background-color: #357AE8;
-    }
-  </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>Sign in with Google to access personalized features</p>
-
-  <div class="signin-container">
-    <div id="g_id_onload"
-         data-client_id="685424294823-a8fvr00a93j8ic2eni4sq63oich7g7nr.apps.googleusercontent.com"
-         data-callback="handleCredentialResponse"
-         data-scope="email profile"
-         data-ux_mode="popup">
-    </div>
-    <div class="g_id_signin" data-type="standard"></div>
+  <h1>Google Sign-In Example</h1>
+  <!-- Google Sign-In Button -->
+  <div id="g_id_onload"
+       data-client_id="685424294823-a8fvr00a93j8ic2eni4sq63oich7g7nr.apps.googleusercontent.com"
+       data-login_uri="https://nuriqams.github.io/oauth2callback"
+       data-auto_prompt="false">
+  </div>
+  <div class="g_id_signin"
+       data-type="standard"
+       data-size="large"
+       data-theme="outline"
+       data-text="sign_in_with"
+       data-shape="rectangular"
+       data-logo_alignment="left">
   </div>
 
-  <div id="welcome"></div>
-
   <script>
-    // Function to handle the response from Google Sign-In
     function handleCredentialResponse(response) {
-      // Decode the ID token using jwt-decode library
-      const data = jwt_decode(response.credential);
-
-      // Display user information
-      document.getElementById("welcome").innerHTML = `
-        <p>Welcome, ${data.name}!</p>
-        <img src="${data.picture}" alt="User's profile picture" width="100" height="100">
-        <p>Email: ${data.email}</p>
-        <button class="logout-button" onclick="logout()">Log Out</button>
-      `;
-      
-      // Optionally: Log user data to the console
-      console.log("User Data:", data);
+      console.log("Encoded JWT ID token: " + response.credential);
+      // Decode and display the user's information (optional)
+      const userInfo = parseJwt(response.credential);
+      console.log("User Info: ", userInfo);
+      alert(`Hello, ${userInfo.name}`);
     }
 
-    // Function to log out (reload the page)
-    function logout() {
-      document.getElementById("welcome").innerHTML = "";
-      location.reload();
+    function parseJwt(token) {
+      const base64Url = token.split('.')[1];
+      const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      const jsonPayload = decodeURIComponent(
+        atob(base64)
+          .split('')
+          .map((c) => '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2))
+          .join('')
+      );
+      return JSON.parse(jsonPayload);
     }
+
+    // Attach the callback to handle sign-in
+    window.onload = () => {
+      google.accounts.id.initialize({
+        client_id: "685424294823-a8fvr00a93j8ic2eni4sq63oich7g7nr.apps.googleusercontent.com",
+        callback: handleCredentialResponse,
+      });
+      google.accounts.id.prompt(); // Show the Google One Tap prompt
+    };
   </script>
 </body>
 </html>
