Update Google Sign-In login URI for improved redirection.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Google Sign-In Button -->
   <div id="g_id_onload"
        data-client_id="685424294823-a8fvr00a93j8ic2eni4sq63oich7g7nr.apps.googleusercontent.com"
-       data-login_uri="https://nuriqams.github.io/oauth2callback"
+       data-login_uri="https://nuriqams.github.io"
        data-auto_prompt="false">
   </div>
   <div class="g_id_signin"
