--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -111,11 +111,20 @@
 
 			async function fetchData() {
 				try {
-				const response = await fetch("http://localhost:3000/api/sheetdata");
-				const data = await response.json();
+					const SHEET_ID = "1wBNTGX5LdR9jqk_TvXaOmYyDyAVqBpwmLZO3G0xGiNU";
+					const API_KEY = "AIzaSyB1JlCIVrZDgWUR9MPhQW0fuOsnjAQkBZk";
+					const RANGE = "Sheet1!A1:E";
 
-				console.log("Raw Data:", data); // Debugging log
-
+					const fetchData = async () => {
+					const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
+					if (response.ok) {
+						const data = await response.json();
+						console.log(data.values); // The rows of your sheet
+					} else {
+						console.error("Error fetching data:", response.status, response.statusText);
+					}
+					};
+					
 				// Safely map the data and ensure it's in the expected format
 				table = data.slice(1).map((row) => ({
 					Name: row[0] || "",
@@ -165,22 +174,20 @@
 					element.className = 'element';
 					
 					const netWorth = parseFloat(table[i]?.NetWorth.replace(/[$,]/g, "")); // Parse NetWorth
-let borderColor;
+					let borderColor;
 
-// Assign border color based on NetWorth
-if (netWorth < 100000) {
-  borderColor = "#EF3022"; // Red
-} else if (netWorth >= 100000 && netWorth <= 200000) {
-  borderColor = "#FDCA35"; // Orange
-} else {
-  borderColor = "#3A9F48"; // Green
-}
+					// Assign border color based on NetWorth
+					if (netWorth < 100000) {
+					borderColor = "#EF3022"; // Red
+					} else if (netWorth >= 100000 && netWorth <= 200000) {
+					borderColor = "#FDCA35"; // Orange
+					} else {
+					borderColor = "#3A9F48"; // Green
+					}
 
-// Set styles
-element.style.backgroundColor = "black"; // Keep the background black
-element.style.border = `4px solid ${borderColor}`; // Add colored border
-
-
+					// Set styles
+					element.style.backgroundColor = "black"; // Keep the background black
+					element.style.border = `4px solid ${borderColor}`; // Add colored border
 
 					const country = document.createElement('div');
 					country.className = 'country';
@@ -238,7 +245,6 @@ element.style.border = `4px solid ${borderColor}`; // Add colored border
 					targets.table.push(object);
 
 				}
-
 
 				// sphere
 
