--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -110,36 +110,41 @@
 			let table = []; // Declare the variable outside to make it accessible
 
 			async function fetchData() {
-				try {
-					const SHEET_ID = "1wBNTGX5LdR9jqk_TvXaOmYyDyAVqBpwmLZO3G0xGiNU";
-					const API_KEY = "AIzaSyB1JlCIVrZDgWUR9MPhQW0fuOsnjAQkBZk";
-					const RANGE = "Sheet1!A1:Z";
+  try {
+    const SHEET_ID = "1wBNTGX5LdR9jqk_TvXaOmYyDyAVqBpwmLZO3G0xGiNU"; // Replace with your actual Google Sheet ID
+    const API_KEY = "AIzaSyB1JlCIVrZDgWUR9MPhQW0fuOsnjAQkBZk"; // Replace with your actual Google API key
+    const RANGE = "Sheet1!A1:F"; // Replace with your desired range (e.g., A1:F for Name, Photo, Age, Country, Interest, NetWorth)
 
-					const fetchData = async () => {
-					const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
-					if (response.ok) {
-						const data = await response.json();
-						console.log(data.values); // The rows of your sheet
-					} else {
-						console.error("Error fetching data:", response.status, response.statusText);
-					}
-					};
+    const response = await fetch(
+      `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`
+    );
 
-				// Safely map the data and ensure it's in the expected format
-				table = data.slice(1).map((row) => ({
-					Name: row[0] || "",
-					Photo: row[1] || "",
-					Age: row[2] || "",
-					Country: row[3] || "",
-					Interest: row[4] || "",
-					NetWorth: row[5] || "",
-				}));
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
 
-				console.log("Formatted Data:", table); // Debugging log
-				} catch (error) {
-					console.error("Error fetching data:", error);
-				}
-			}
+    const data = await response.json();
+
+    console.log("Raw Data:", data.values); // Debugging log
+
+    // Safely map the data and ensure it's in the expected format
+    const table = data.values.slice(1).map((row) => ({
+      Name: row[0] || "N/A",
+      Photo: row[1] || "",
+      Age: row[2] || "N/A",
+      Country: row[3] || "N/A",
+      Interest: row[4] || "N/A",
+      NetWorth: row[5] || "N/A",
+    }));
+
+    console.log("Formatted Data:", table); // Debugging log
+
+    return table; // Return the table for further use
+  } catch (error) {
+    console.error("Error fetching data:", error);
+  }
+}
+
 
 			let camera, scene, renderer;
 			let controls;
@@ -245,6 +250,7 @@
 					targets.table.push(object);
 
 				}
+
 
 				// sphere
 
