Fix import path for Three.js module in periodic table HTML

--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -94,7 +94,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../three.module.js",
+					"three": "./three.module.js",
 					"three/addons/": "./jsm/"
 				}
 			}
