--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -94,8 +94,8 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "./three.module.js",
-					"three/addons/": "./jsm/"
+					"three": "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js",
+					"three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/"
 				}
 			}
 		</script>
