--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -110,64 +110,66 @@
 			let table = []; // Declare the variable outside to make it accessible
 
 			async function fetchData() {
-  try {
-    const SHEET_ID = "1wBNTGX5LdR9jqk_TvXaOmYyDyAVqBpwmLZO3G0xGiNU"; // Replace with your actual Google Sheet ID
-    const API_KEY = "AIzaSyB1JlCIVrZDgWUR9MPhQW0fuOsnjAQkBZk"; // Replace with your actual Google API key
-    const RANGE = "Sheet1!A1:F"; // Replace with your desired range (e.g., A1:F for Name, Photo, Age, Country, Interest, NetWorth)
-
-    const response = await fetch(
-      `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`
-    );
-
-    if (!response.ok) {
-      throw new Error(`HTTP error! status: ${response.status}`);
-    }
-
-    const data = await response.json();
-
-    console.log("Raw Data:", data.values); // Debugging log
-	console.log(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
-
-
-    // Safely map the data and ensure it's in the expected format
-    const table = data.values.slice(1).map((row) => ({
-      Name: row[0] || "N/A",
-      Photo: row[1] || "",
-      Age: row[2] || "N/A",
-      Country: row[3] || "N/A",
-      Interest: row[4] || "N/A",
-      NetWorth: row[5] || "N/A",
-    }));
-
-    console.log("Formatted Data:", table); // Debugging log
-
-    return table; // Return the table for further use
-  } catch (error) {
-    console.error("Error fetching data:", error);
-  }
-}
-
-
-			let camera, scene, renderer;
-			let controls;
-
-			const objects = [];
-			const targets = { table: [], sphere: [], helix: [], grid: [] };
-
-			async function initWithData() {
 				try {
-					await fetchData(); // Wait for data to be fetched
-					console.log("Data fetched successfully:", table);
-					init(); // Initialize only after data is ready
-					animate(); // Start animation
-				} catch (error) {
-					console.error("Error initializing data and scene:", error);
+					const SHEET_ID = "1wBNTGX5LdR9jqk_TvXaOmYyDyAVqBpwmLZO3G0xGiNU"; // Replace with your actual Google Sheet ID
+					const API_KEY = "AIzaSyB1JlCIVrZDgWUR9MPhQW0fuOsnjAQkBZk"; // Replace with your actual Google API key
+					const RANGE = "Sheet1!A1:F"; // Replace with your desired range (e.g., A1:F for Name, Photo, Age, Country, Interest, NetWorth)
+
+					const response = await fetch(
+					`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`
+					);
+
+					if (!response.ok) {
+					throw new Error(`HTTP error! status: ${response.status}`);
 				}
+
+			const data = await response.json();
+
+			console.log("Raw Data:", data.values); // Debugging log
+			console.log(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
+
+
+			// Safely map the data and ensure it's in the expected format
+			table = data.values.slice(1).map((row) => ({
+				Name: row[0] || "N/A",
+				Photo: row[1] || "",
+				Age: row[2] || "N/A",
+				Country: row[3] || "N/A",
+				Interest: row[4] || "N/A",
+				NetWorth: row[5] || "N/A",
+			}));
+
+			console.log("Formatted Data:", table); // Debugging log
+
+			} catch (error) {
+				console.error("Error fetching data:", error);
 			}
+		}
+		
+		async function initWithData() {
+			try {
+					await fetchData(); // Wait for data to populate the global `table`
+					if (table.length === 0) {
+						throw new Error("No data in the table array");
+					}
 
-			initWithData();
+					console.log("Data fetched successfully:", table);
+					init(); // Initialize the 3D scene
+					animate(); // Start animation
+					
+			} catch (error) {
+				console.error("Error initializing data and scene:", error);
+			}
+		}
 
-			function init() {
+		initWithData();
+		let camera, scene, renderer;
+		let controls;
+
+		const objects = [];
+		const targets = { table: [], sphere: [], helix: [], grid: [] };
+
+		function init() {
 
 				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10000 );
 				camera.position.z = 3000;
@@ -175,8 +177,16 @@
 				scene = new THREE.Scene();
 
 				// table
+				console.log("Table data in init:", table);
 
+		if (table.length === 0) {
+		console.error("Table array is empty. No elements to create.");
+		return;
+		}
 				for (let i = 0; i < table.length; i++) {
+
+					console.log(`Creating element for entry ${i}:`, table[i]);
+
 					const element = document.createElement('div');
 					element.className = 'element';
 					
