Update TrackballControls import to use CDN for improved loading performance

--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -104,7 +104,7 @@
 
 			import * as THREE from 'three';
 			import TWEEN from 'three/addons/libs/tween.module.js';
-			import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+			import { TrackballControls } from 'https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/controls/TrackballControls.js';
 			import { CSS3DRenderer, CSS3DObject } from 'three/addons/renderers/CSS3DRenderer.js';
 
 			let table = []; // Declare the variable outside to make it accessible
